--- a/currency-service/src/main/resources/application.properties
+++ b/currency-service/src/main/resources/application.properties
@@ -1,2 +1,32 @@
 server.port=8009
+management.server.port=8009
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=beans,mappings,sessions,health
 spring.application.name=springimplant-currency-service
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+spring.security.oauth2.client.registration.github.client-id=Ov23liiIncMsEh1xJehd
+spring.security.oauth2.client.registration.github.client-secret=ba5a77cd1e1439cd3e9a88dba15637e9d5411dd6
+spring.security.oauth2.client.registration.google.client-id=373941589680-kd77o1e9d47c6dbosrhghgfhgfhnseb2bdqhl05455jbggf7.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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454
+
+#if more kafka servers are running we can provide the ports as comma seperated values
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=myUser:com.springimplant.currencyservice.contract.User
+spring.kafka.producer.properties.spring.json.type.mapping=partner:com.springimplant.currencyservice.contract.DeliveryPartnerData
+
+spring.kafka.consumer.group-id=myGroup
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+#spring.kafka.consumer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.type.mapping=myUser1:com.springimplant.currencyservice.contract.User
+spring.kafka.consumer.properties.spring.json.type.mapping=partner:com.springimplant.currencyservice.contract.DeliveryPartnerData
+
+kafka.health.indicator.timeout.ms=100
+
+spring.cloud.config.uri=http://localhost:8888
